*Fixed RouterLink not working if its calling the same url handled it by subscribing to a paramID *Fixed grid images in the product detail are overflowed
	modified:   src/app/product.service.ts
	modified:   src/app/products-detail/products-detail.component.html
	modified:   src/app/products-detail/products-detail.component.scss
	modified:   src/app/products-detail/products-detail.component.ts

--- a/src/app/products-detail/products-detail.component.scss
+++ b/src/app/products-detail/products-detail.component.scss
@@ -10,7 +10,7 @@
 
 .products-detail-grid-items > div {
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
     padding-bottom: 1.5rem;
     
 }
